[gd_scene load_steps=7 format=3 uid="uid://bgjph6iceqvnd"]

[ext_resource type="Script" path="res://level_up.gd" id="1_v2bp0"]
[ext_resource type="Texture2D" uid="uid://bi8gu2ab5mb75" path="res://sword.png" id="2_6x2f7"]
[ext_resource type="Texture2D" uid="uid://dahhe8cowb83b" path="res://maxhealth.png" id="3_2bwba"]
[ext_resource type="Texture2D" uid="uid://lxwq7pu45vy1" path="res://health.png" id="4_xfnqe"]
[ext_resource type="Texture2D" uid="uid://ba526bj1al0dn" path="res://gratz.png" id="5_6rrdo"]

[sub_resource type="ViewportTexture" id="ViewportTexture_l7y53"]

[node name="LevelUp" type="Node2D"]
script = ExtResource("1_v2bp0")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 1905.0
offset_bottom = 1096.0
size_flags_horizontal = 4

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.6, 0.6, 0.6, 0.196078)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
modulate = Color(1, 0, 1, 1)
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Attack" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Aumentar Ataque"
icon = ExtResource("2_6x2f7")
alignment = 0

[node name="Health" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Aumentar vida m√°xima"
icon = ExtResource("3_2bwba")
alignment = 0

[node name="Heal" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_icons/icon = SubResource("ViewportTexture_l7y53")
text = "Recuperar vida"
icon = ExtResource("4_xfnqe")
alignment = 0

[node name="Gratz" type="Sprite2D" parent="MarginContainer"]
position = Vector2(947, 187)
texture = ExtResource("5_6rrdo")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Health" to="." method="_on_health_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Heal" to="." method="_on_heal_pressed"]
